Se Añade Home a proyecto

--- a/datascience/datascience/plantillas/menu.html
+++ b/datascience/datascience/plantillas/menu.html
@@ -12,7 +12,7 @@
 </style>
     <body>
     <ul id="menu">
-    <li>HOME</li>
+     <a href="http://127.0.0.1:8000/index/">HOME </a>
     <li>ENCUESTA</li>
     <li>ESTANDAR</li>
     <li>AVANZADO</li>
