--- a/datascience/datos/plantillas/home1.html
+++ b/datascience/datos/plantillas/home1.html
@@ -9,7 +9,7 @@
  </div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script><script>
     var config = {
-      type: 'line',
+      type: 'pie',
       data: {
         datasets: [{
           data: [1780000, 1630000, 582602, 416522, 411634, 318332, 318332, 306659, 233040],
